# progmk

./: .gitmodules  README.md  file.txt  file.txt.pub
STM32103_m/: CMakeCache.txt  CMakeLists.txt  DFT.c  DFT.h  Makefile  STM32103_m.elf  STM32103_m.map  cmake_install.cmake  main.c  stm32_template.map  stm32f103_basic.ld.in
STM32103_m/libs/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  cmake_install.cmake
STM32103_m/opencm3_build-prefix/tmp/: opencm3_build-mkdirs.cmake
test/: CMakeLists.txt  Makefile  test_1  test_1.c
test/lib_custom/: CMakeLists.txt
test/lib_custom/scr/: mylib_test.c
